# blockchain-project

./: .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml  render.yaml
database/: complete_schema.sql  drop_all_tables.sql
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  README.md
src/: blockchain.rs  config.rs  crypto.rs  database.rs  main.rs  models.rs  utils.rs
src/handlers/: auth_handler.rs  blockchain_handler.rs  logs_handler.rs  mod.rs  transaction_handler.rs  wallet_handler.rs
src/middleware/: jwt_auth.rs  mod.rs
src/services/: auth_service.rs  mod.rs  otp_service.rs  transaction_service.rs  wallet_service.rs  zakat_service.rs
